полноценная реализация жадного алгоритма с вероятностным выбором лучшего ребра