@@ -1,16 +1,64 @@
 package tsp;
 
+import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.neo4j.graphdb.*;
 import org.neo4j.procedure.*;
 
-import java.util.HashSet;
-import java.util.LinkedHashSet;
+import java.util.*;
+import java.util.function.ToDoubleFunction;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 public class Tsp {
     @Context
     public Transaction tx;
+
+    private <T> Optional<T> selectRandom(List<T> items, ToDoubleFunction<T> key, Random rand, StringBuilder sb) {
+        if (items.isEmpty()) {
+            return Optional.empty();
+        } else if (items.size() == 1) {
+            return Optional.of(items.get(0));
+        } else {
+            var values = items.stream().mapToDouble(key);
+            var prefixSum = values
+                    .collect(ArrayList<Double>::new, (sums, number) -> {
+                        if (sums.isEmpty()) {
+                            sums.add(number);
+                        } else {
+                            sums.add(sums.get(sums.size() - 1) + number);
+                        }
+                    }, (sums1, sums2) -> {
+                        if (!sums1.isEmpty()) {
+                            double sum = sums1.get(sums1.size() - 1);
+                            sums2.replaceAll(num -> sum + num);
+                        }
+                        sums1.addAll(sums2);
+                    });
+
+            var sum = prefixSum.get(prefixSum.size() - 1);
+
+            var value = rand.nextDouble() * sum;
+
+            sb.append(String.format("prefix sum:%n"));
+            prefixSum.forEach(d -> sb.append(String.format("%f%n", d)));
+
+            var index = prefixSum.size() - 1;
+            for(; index >= 0; --index) {
+                if(prefixSum.get(index) < value) {
+                    break;
+                }
+            }
+            index++;
+
+            sb.append(String.format("index to select: %d%n", index));
+
+            var result = items.get(index);
+
+            return Optional.of(result);
+        }
+    }
 
     private String nodeToString(Node node) {
         var id = (String) node.getProperty("id");
@@ -23,64 +71,25 @@ public class Tsp {
     private String edgeToString(Relationship relationship) {
 
         var distance = (Double) relationship.getProperty("distance");
-        return String.format(String.format("Relationship { id1: %s, id2: %s, destination: %f}}",
+        return String.format(String.format("Relationship { id1: %s, id2: %s, distance: %f}}",
                 nodeToString(relationship.getStartNode()),
                 nodeToString(relationship.getEndNode()),
                 distance));
     }
 
-    @Procedure
-    @Description("tsp.allSingleNodes(nodes) yield singleNode")
-    public Stream<TspResult> solve(
-            @Name("originId") String originId,
-            @Name("relationshipTypeName") String relationshipTypeName,
-            @Name("nodeTypeName") String nodeTypeName,
-            @Name("relationshipPropertyName") String relationshipPropertyName)
-    {
+    private List<Node> getOrigins(Label nodeLabel, long samplesCount, StringBuilder sb) {
+        var nodesIterator = tx.findNodes(nodeLabel);
 
-        var sb = new StringBuilder();
-
-        final Label NODE = Label.label(nodeTypeName);
-
-        sb.append(String.format("NODE: %s%n", NODE));
-
-        final RelationshipType relationshipType = StreamSupport
-                .stream(tx.getAllRelationshipTypes().spliterator(), false)
-                .filter(t -> relationshipTypeName.equals(t.name()))
-                .findFirst()
-                .orElseThrow(() -> new RuntimeException("Relationship type not found"));
-
-        sb.append(String.format("relationshipType: %s%n", relationshipType));
-
-        var nodesIterator = tx.findNodes(NODE);
-
-//        var originOpt = nodesIterator
-//                .stream()
-//                .filter(n -> originId.equals(n.getElementId()))
-//                .findFirst()
-//                .orElseThrow(() -> new RuntimeException("Origin node not found"));
-
-        var originOpt = nodesIterator
+        var origins = nodesIterator
                 .stream()
-                .filter(n -> {
-                    var id = (String)n.getProperty("id");
-                    return originId.equals(id);
-                })
-                .findFirst();
+                .collect(Collectors.toList());
 
-        if(originOpt.isEmpty()) {
+        Collections.shuffle(origins);
 
-            nodesIterator = tx.findNodes(NODE);
-            nodesIterator
-                    .stream().forEach(n -> sb.append(String.format("NODE: %s%n", n.getElementId())));
+        return origins.stream().limit(samplesCount).toList();
+    }
 
-            sb.append("Origin node not found%n");
-
-            return Stream.of(new TspResult(sb.toString()));
-        }
-
-        Node origin = originOpt.get();
-
+    private LocalTspResult iteration(Node origin, long topCount, String relationshipPropertyName, RelationshipType relationshipType, Random rand, StringBuilder sb) {
         var nextVertex = origin;
 
         var usedVertices = new HashSet<Node>();
@@ -91,36 +100,32 @@ public class Tsp {
         boolean edgesAreAvailable = false;
 
         int iteration = 0;
-        while(true) {
+        while (true) {
             sb.append(String.format("iteration: %d%n", iteration));
 
             var availableEdges = nextVertex
                     .getRelationships(Direction.OUTGOING, relationshipType)
                     .stream()
                     .filter(e -> !order.contains(e) && !usedVertices.contains(e.getEndNode()))
-                    .toList();
+                    .collect(Collectors.toList());
 
             edgesAreAvailable = !availableEdges.isEmpty();
 
             sb.append(String.format("edgesAreAvailable: %b%n", edgesAreAvailable));
 
-            if(!edgesAreAvailable){
+            if (!edgesAreAvailable) {
                 break;
             }
 
-//            var smallestEdge = availableEdges.stream().collect(Collectors.minBy((e1, e2) -> {
-//                var weight1 = (Double)e1.getProperty(relationshipPropertyName);
-//                var weight2 = (Double)e2.getProperty(relationshipPropertyName);
-//
-//                return Double.compare(weight1, weight2);
-//            })).get();
+            availableEdges.sort(Comparator.comparingDouble(e -> Utils.getDistance(e, relationshipPropertyName)));
 
-            var smallestEdge = availableEdges.stream().min((e1, e2) -> {
-                var weight1 = (Double) e1.getProperty(relationshipPropertyName);
-                var weight2 = (Double) e2.getProperty(relationshipPropertyName);
+            var pretendents = IntStream
+                    .range(0, availableEdges.size())
+                    .mapToObj(i -> new ImmutablePair<>(i + 1, availableEdges.get(i)))
+                    .limit(topCount)
+                    .toList();
 
-                return Double.compare(weight1, weight2);
-            }).get();
+            var smallestEdge = selectRandom(pretendents, e -> e.left * e.left, rand, sb).get().right;
 
             sb.append(String.format("smallestEdge: %s%n", edgeToString(smallestEdge)));
 
@@ -135,20 +140,81 @@ public class Tsp {
         }
 
         nextVertex
-            .getRelationships(Direction.OUTGOING, relationshipType)
-            .stream().filter(r -> origin.equals(r.getEndNode())).findFirst().ifPresent(order::add);
+                .getRelationships(Direction.OUTGOING, relationshipType)
+                .stream().filter(r -> origin.equals(r.getEndNode())).findFirst().ifPresent(order::add);
 
-//        return order.stream().map(TspResult::new);
-        return Stream.concat(order.stream().map(TspResult::new), Stream.of(new TspResult(sb.toString())));
+        return new LocalTspResult(order, relationshipPropertyName);
+    }
+
+    @Procedure
+    @Description("tsp.solve(nodes) yield relationship, cumulativeDistance, log")
+    public Stream<TspResult> solve(
+            @Name("relationshipTypeName") String relationshipTypeName,
+            @Name("nodeTypeName") String nodeTypeName,
+            @Name("relationshipPropertyName") String relationshipPropertyName,
+            @Name("samplesCount") Long samplesCount,
+            @Name("topCount") Long topCount) {
+
+        var sb = new StringBuilder();
+
+        try {
+            final Label nodeLabel = Label.label(nodeTypeName);
+
+            sb.append(String.format("nodeLabel: %s%n", nodeLabel));
+
+            final RelationshipType relationshipType = StreamSupport
+                    .stream(tx.getAllRelationshipTypes().spliterator(), false)
+                    .filter(t -> relationshipTypeName.equals(t.name()))
+                    .findFirst()
+                    .orElseThrow(() -> new RuntimeException("Relationship type not found"));
+
+            sb.append(String.format("relationshipType: %s%n", relationshipType));
+
+            var origins = getOrigins(nodeLabel, samplesCount, sb);
+
+            var rand = new Random(0);
+
+            LocalTspResult best = null;
+
+            for(int i = 0; i < samplesCount; ++i){
+                var origin = origins.get(i % origins.size());
+                var result = iteration(origin, topCount, relationshipPropertyName, relationshipType, rand, sb);
+
+                if(best == null || result.getTotalDistance() < best.getTotalDistance()) {
+                    best = result;
+                }
+            }
+
+
+            if(best == null) {
+                return Stream.of(new TspResult(sb.toString()));
+            }
+
+            double cumulativeDistance = 0.0;
+            var bestPath = best.getPath();
+            var results = new ArrayList<TspResult>(bestPath.size());
+            for(var road : best.getPath()) {
+                cumulativeDistance += Utils.getDistance(road, relationshipPropertyName);
+                results.add(new TspResult(road, cumulativeDistance));
+            }
+            return Stream.concat(results.stream(), Stream.of(new TspResult(sb.toString())));
+        }
+        catch (Throwable ex) {
+            sb.append(ex.getMessage());
+            return Stream.of(new TspResult(sb.toString()));
+        }
     }
 
     public static class TspResult {
         public String log;
         public Relationship relationship;
+        public Double cumulativeDistance;
 
-        public TspResult(Relationship relationship) {
+        public TspResult(Relationship relationship, double cumulativeDistance) {
             this.relationship = relationship;
+            this.cumulativeDistance = cumulativeDistance;
         }
+
         public TspResult(String log) {
             this.log = log;
         }
